--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <h1 class="header">Explore different types of Dog Breeds</h1>
 
 <select  class="breeds-select" onchange="changeDogs(this)">
-    <!-- <option>choose a type of breed</option> -->
+    <option>choose a type of breed</option>
 </select>
 <div class="dog-details"> 
     
